--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* ----- Navigation bar ----- */
 .google-icon{
     font-size: 33px;
 }
@@ -11,8 +12,66 @@
     margin-left: 10px;
 }
 
-@media only screen  and (min-width : 1224px) {
+.sidenav-img{
+    width: 95px !important;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+/* ----- Hero ----- */
+.hero-img{
+    margin-top: 50px;
+    width: 95px !important;
+}
+
+h1{
+    margin-top: 8px;
+    font-size: 65px;
+    font-weight: 100;
+}
+
+.card-title-hero{
+    font-size: 35px !important;
+    margin-top: 15px;
+    margin-bottom: 30px !important;
+}
+
+.card-content-hero{
+    font-size: 17px;
+}
+
+.nav-item-mobile{
+    margin-right: -50px;
+}
+
+
+@media only screen  and (min-width: 1024px){
     .brand-logo{
         margin-left: 20px; 
+    }
+
+    .row{
+        width: 75%;
+    }
+}
+
+@media only screen  and (max-width: 767px){
+    .hero-img{
+        margin-top: 0px;
+        width: 70px !important;
+    }
+
+    h1{
+        font-size: 50px;
+        margin-bottom: 40px !important;
+    }
+
+    .card-title-hero{
+        margin-top: 10px;
+        font-size: 30px !important;
+    }
+
+    .card-content-hero{
+        font-size: 16px;
     }
 }
