--- a/css/main-tablets.css
+++ b/css/main-tablets.css
@@ -1,1 +1,45 @@
+/* ----- Navigation bar ----- */
+.brand-logo{
+    font-size: 30px !important;
+}
+
 /* ----- Hero ----- */
+.hero{
+    width: 100%;
+    height: 96vh;
+    background-image: url('../rsc/hero-wallapaper2.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+}
+
+.hero-container-tablet-desktop{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    margin-bottom: 175px;
+}
+
+.hero-img{
+    width: 95px !important;
+    margin-top: 60px !important;
+}
+
+.hero-title{
+    font-size: 67px;
+    font-weight: 200;
+    margin-top: 10px;
+}
+
+.card-title-hero{
+    font-size: 30px !important;
+    
+}
+
+.card-content{
+    font-size: 17px;
+}
