--- a/css/main-desktops.css
+++ b/css/main-desktops.css
@@ -90,6 +90,14 @@
     height: 70vh;
 }
 
+.share-title{
+    font-size: 50px;
+}
+
+.share-text{
+    font-size: 25px;
+}
+
 /* ----- Get started ----- */
 
 .get-started{
