--- a/css/main-tablets.css
+++ b/css/main-tablets.css
@@ -62,3 +62,13 @@
 .share-text{
     font-size: 20px;
 }
+
+/* ----- Footer ----- */
+
+.footer-title{
+    font-size: 25px;
+}
+
+.footer-text{
+    font-size: 15px;
+}
