--- a/css/main-desktops.css
+++ b/css/main-desktops.css
@@ -104,3 +104,18 @@
     width: 100%;
     height: 70vh;
 }
+
+/* ----- Footer ----- */
+
+.footer-title{
+    margin-top: 50px;
+    font-size: 35px;
+}
+
+.footer-text{
+    font-size: 15px;
+}
+
+.divider{
+    margin-top: 80px;
+}
