--- a/css/main-phones.css
+++ b/css/main-phones.css
@@ -161,3 +161,19 @@
     font-size: 15px;
 }
 
+/* ----- Footer ----- */
+
+.footer{
+    width: 100%;
+    height: 35vh;
+}
+
+.footer-title{
+    font-weight: 200;
+    font-size: 15px;
+}
+
+.footer-text{
+    font-size: 10px;
+}
+
