--- a/css/main-phones.css
+++ b/css/main-phones.css
@@ -91,7 +91,7 @@
 
 .store-any-file{
     width: 100%;
-    height: 60vh;
+    height: 500px;
 }
 
 .store-info{
@@ -110,7 +110,7 @@
 
 .stuff-anywhare{
     width: 100%;
-    height: 60vh;
+    height: 500px;
 }
 
 .stuff-info{
@@ -129,7 +129,7 @@
 
 .share-files{
     width: 100%;
-    height: 60vh;
+    height: 500px;
 }
 
 .share-title{
@@ -145,7 +145,7 @@
 
 .get-started{
     width: 100%;
-    height: 60vh;
+    height: 500px;
 }
 
 .started-title{
@@ -165,7 +165,7 @@
 
 .footer{
     width: 100%;
-    height: 35vh;
+    height: 300px;
 }
 
 .footer-title{
